--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ release/
 
 # Common build directories
 /build*/
+build/
 
 # CI jobs that run in symlinked trees produce these artifacts.
 /real_work/
